--- a/mydidata/static/css/mydidata.css
+++ b/mydidata/static/css/mydidata.css
@@ -412,7 +412,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 
 .mkt-nav {
-    height: 66px;
+    margin-bottom: 50px;
     background-color: #f7fbfd;
     border: none;
 }
