--- a/mydidata/templates/mydidata/progress.html
+++ b/mydidata/templates/mydidata/progress.html
@@ -18,7 +18,7 @@
                         <tr>
                             <td>{{student.first_name}}</td>
                             
-                            {%for question in topic.question_set.all%}
+                            {%for question in topic.get_ordered_questions %}
                                 {% get_answers question student as answers%}
                                 {%if answers%}
                                     {%for answer in answers%}
