--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -56,7 +56,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             {% if user.is_authenticated %}
                                 <li><a href="/mydidata/logout/">Sair</a></li>
-                                <li><a href="{% url 'mydidata:define_team' %}">Trabalhar em Equipe</a></li>
+                                <!-- <li><a href="{% url 'mydidata:define_team' %}">Trabalhar em Equipe</a></li> -->
                                 <li><a href="{% url 'mydidata:disciplines' %}"
                                        class="p-r-none">Disciplinas</a></li>
                                 <li><a href="{% url 'mydidata:my_progress' %}"
