--- a/mydidata/templates/mydidata/question_item_view.html
+++ b/mydidata/templates/mydidata/question_item_view.html
@@ -1,7 +1,9 @@
 {% load question_extras %}
 <tr>
     <td class="ci-td-p-l"><a href="{{ question.get_answer_url }}">Questão {{ question.index}}</a></td>
-    <td>{% get_question_status question user%}</td>
+    {% if user.is_authenticated %}
+		<td>{% get_question_status question user%}</td>
+	{%endif%}
     <td class="con-cntrl">
         {# Question Edit Link #}
         
