--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -9,11 +9,10 @@
     <div class="mkt-s1">
         <div class="mkt-s1-body container ">
             <div class="row">
-                <h1 class="col-md-8">Um novo jeito de lecionar</h1>
+                <h1 class="col-md-8">Sistema Didata</h1>
             </div>
             <div class="row">
-                <p class="col-md-8">Uma aplicação Didata auxilia ao Professor na tarefa 
-                de criar turmas online, cadastrar tarefas, gerar avaliações e acompanhar o progresso de cada aluno </p>
+                <p class="col-md-8">Aprenda colocando a mão na massa!</p>
             </div>
             <div class="row">
                 {# First Signup Link #}
@@ -30,8 +29,8 @@
         <div class="mkt-s2-body">
             <div class="col-md-4 mkt-vp">
                 <img class="" src="/static/images/clock.png"/>
-                <h5>Poupe tempo</h5>
-                <p>Cadastrando tarefas e questões no Didata, gere avaliações online automaticamente!</p>
+                <h5>Aprenda Cada Conteúdo de Forma Contextualizada!</h5>
+                <p>Oferecemos uma série de tutoriais e atividades práticas que favorecem o seu aprendizado</p>
             </div>
             <div class="col-md-4 mkt-vp">
                 <img class="" src="/static/images/lightbulb.png"/>
