Feedback feature implemented

--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -85,7 +85,9 @@
         {# The Footer #}
         <div class="footer">
             <div class="container">
-                <p>Copyright Didata</p>
+                <p>Desenvolvido por: Thiago Nunes; </p>
+                <p>Home page: <a href='http://thiagonunes.dev'> thiagonunes.dev</a>&nbsp&nbsp Contato: thiago.nunes@iff.edu.br</p>
+
             </div>
         </div>
     </body>
