--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -12,7 +12,10 @@
                 <h1 class="col-md-8">Sistema Didata</h1>
             </div>
             <div class="row">
-                <p class="col-md-8">Aprenda colocando a mão na massa!</p>
+                <h3 class="col-md-8">Aprenda com a Mão na Massa!</h3>
+            </div>
+            <div class="row">
+                <p class="col-md-8">Prof. Thiago Ribeiro Nunes</p>
             </div>
             <div class="row">
                 {# First Signup Link #}
