--- a/mydidata/templates/mydidata/answer_cru.html
+++ b/mydidata/templates/mydidata/answer_cru.html
@@ -3,7 +3,22 @@
 
 {% block content %}
     <div id="content-container" class="container p-none">
+    	{% if form.errors %}
+		    {% for field in form %}
+		        {% for error in field.errors %}
+		            <div class="alert alert-danger">
+		                <strong>{{ error|escape }}</strong>
+		            </div>
+		        {% endfor %}
+		    {% endfor %}
+		    {% for error in form.non_field_errors %}
+		        <div class="alert alert-danger">
+		            <strong>{{ error|escape }}</strong>
+		        </div>
+		    {% endfor %}
+		{% endif %}
         <h2 class="ad-mh">Questão {{question.index}}</h2>
+
         {%if question.is_discursive%}
             {% include 'mydidata/discursive_answer_item_form.html' %}
         {%else%}
