--- a/mydidata/templates/mydidata/class_list.html
+++ b/mydidata/templates/mydidata/class_list.html
@@ -17,11 +17,11 @@
             <ul id="al-group" class="strip-list">
                 {% for classroom in class_list %}
                     <li class="al-item">
-                        <a href="{{ classroom.get_absolute_url }}"><h4 class="al-name">{{ classroom.name }}</h4></a>
+                        <a href="{{ classroom.get_absolute_url }}">{{ classroom.name }}</a>
                         &nbsp
                         |
                         &nbsp
-                        <a style="color: #3371b7;" href="{{ classroom.get_percentage_progress_url }}"><h4 class="al-name">Ver progresso(%)</h4></a>
+                        <a style="color: #3371b7;" href="{{ classroom.get_percentage_progress_url }}">Ver progresso(%)</a>
                     </li>
                 {% endfor %}
             </ul>
