--- a/mydidata/templates/mydidata/discursive_answer_item_form.html
+++ b/mydidata/templates/mydidata/discursive_answer_item_form.html
@@ -1,7 +1,8 @@
+{% if error_message %}<h4><strong>{{ error_message }}</strong></h4>{% endif %}
 <h2 class="ad-mh">Resposta: {{answer.student.first_name}}&nbsp;{{answer.student.last_name}}</h2>
 <p>{{ question.question_text | safe}}</p>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
 
 {% if answer.feedback %}
     <h3 class="gi-sh">Correções Solicitadas</h3>
