closing/opening topics

--- a/mydidata/templates/mydidata/discursive_answer_item_form.html
+++ b/mydidata/templates/mydidata/discursive_answer_item_form.html
@@ -24,7 +24,7 @@
            value="{{ test.id}}"/>
 {%endif%}
 
-<input type="submit" value="Enviar" />
+<input type="submit" value="Salvar" />
 </form>
 {% if user.is_superuser %}
     <a href='{{ classroom.get_absolute_url }}'>Voltar para Progresso da Turma</a>
