--- a/mydidata/templates/mydidata/topic_list.html
+++ b/mydidata/templates/mydidata/topic_list.html
@@ -7,7 +7,7 @@
             <div id="al-control">
                 <h3 class="ad-mh">Tópicos
                     <span class="pull-right">
-                        <a href="{% url 'mydidata:topic_new' %}"
+                        <a href=""
                            class="btn btn-link p-r-none">+ Criar Tópico</a>
                     </span>
                 </h3>
