--- a/mydidata/templates/mydidata/progress.html
+++ b/mydidata/templates/mydidata/progress.html
@@ -13,8 +13,22 @@
         <ul id="al-group" class="strip-list">
             {% for topic in topics %}
             {% get_progress_url classroom topic as progress_url%}
+
                 <li class="al-item">
-                    <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }}</h4></a>
+                    {% get_close_url classroom topic as close_url %}
+                    {% get_open_url classroom topic as open_url %}
+                    {% is_topic_closed classroom topic as topic_closed %}
+                    
+                    {% if topic_closed%}
+                        <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }}(Fechado)</h4></a>                        
+                        <h4><a href="{{open_url}}">Abrir</a></h4>
+                    {%else%}
+
+                        <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }}</h4></a>                        
+                        <h4><a href="{{close_url}}">Fechar</a></h4>
+                    {%endif%}
+
+                    
                     
                 </li>
             {% endfor %}
