--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -64,6 +64,8 @@
 								{% if user.is_superuser%}
 									<li><a href="{% url 'mydidata:classes' %}"
 	                                   class="p-r-none">Turmas</a></li>
+                                    <li><a href="{% url 'mydidata:resource_rooms' %}"
+                                       class="p-r-none">Turmas de Reforço</a></li>
 								{% endif %}
                             {% else %}
                                 <li><a href="/mydidata/login/">Login</a></li>
