--- a/mydidata/templates/mydidata/discipline_list.html
+++ b/mydidata/templates/mydidata/discipline_list.html
@@ -5,7 +5,7 @@
     <div id="content-container" class="container p-none">
         <div id="al-container" class="side-p">
             <div id="al-control">
-                <h3 class="ad-mh">Disiciplinas</h3>
+                <h3 class="ad-mh">Disciplinas</h3>
                 {# Account Search Form #}
             </div>
             {# List of Accounts #}
