--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -11,10 +11,13 @@
 		{%endif%}
 		
         {%for topic in topics %}
-            {% get_close_url classroom topic as close_url %}
-            {% get_open_url classroom topic as open_url %}
-            {% is_topic_closed classroom topic as topic_closed %}
-            {% if user.is_superuser%}
+            {%if classroom%}
+                {% get_close_url classroom topic as close_url %}
+                {% get_open_url classroom topic as open_url %}
+                {% is_topic_closed classroom topic as topic_closed %}
+            {%endif%}
+
+            {% if user.is_superuser and classroom%}
                 {% if topic_closed%}
                     <h2>{{topic.topic_title}} (Fechado)</h2>
                     <h4><a href="{{open_url}}">Abrir</a></h4>
