--- a/mydidata/templates/mydidata/progress.html
+++ b/mydidata/templates/mydidata/progress.html
@@ -18,6 +18,7 @@
                     {% get_close_url classroom topic as close_url %}
                     {% get_open_url classroom topic as open_url %}
                     {% get_assess_url classroom topic as assess_url %}
+                    {% get_grades_url classroom topic as grades_url %}
                     {% is_topic_closed classroom topic as topic_closed %}
                     {% if topic_closed%}
                         <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }} (Fechado)</h4></a> |                          
@@ -28,7 +29,7 @@
                         <a href="{{close_url}}">Fechar</a>
                     {%endif%}
                     | <a href="{{assess_url}}">Corrigir</a>
-                    
+                    | <a href="{{grades_url}}">Notas</a>
                 </li>
             {% endfor %}
         </ul>
