--- a/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
+++ b/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
@@ -1,7 +1,14 @@
+
+
 <p>{{ question.question_text | safe}}</p>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}
+    <div class="alert alert-danger">
+        <strong>{{ error_message }}</strong>
+    </div>
 
+{% endif %}
+<h4 class="gi-sh">Marque uma das opções abaixo e clique em enviar</h4>
 <form action="{% url 'mydidata:multiple_choice_answer' question.uuid %}" method="post">
 {% csrf_token %}
     {% for choice in question.choice_set.all %}
