Finalização individual de avaliações

--- a/mydidata/templates/mydidata/answer_cru.html
+++ b/mydidata/templates/mydidata/answer_cru.html
@@ -18,7 +18,7 @@
 		    {% endfor %}
 		{% endif %}
 		
-        <h2 class="ad-mh">Questão {{question.index}}: {{user.first_name}}&nbsp;{{user.last_name}}</h2>
+        <h2 class="ad-mh">Resposta de: {{user.first_name}}&nbsp;{{user.last_name}}</h2>
 
         {%if question.is_discursive%}
             {% include 'mydidata/discursive_answer_item_form.html' %}
