Inline format multiple choice options!

--- a/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
+++ b/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
@@ -11,7 +11,7 @@
 <form action="{% url 'mydidata:multiple_choice_answer' question.uuid %}" method="post">
 {% csrf_token %}
     {% for choice in question.shuffled_choice_set %}
-        <div style="display: block;width: 100%;">   
+        <div style="display: block;width: 100%;margin-bottom: 10px;">   
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
             <label for="choice{{ forloop.counter }}" style="display: inline;">{{ choice.choice_text }}</label><br />
         </div>
