--- a/mydidata/templates/mydidata/test_list.html
+++ b/mydidata/templates/mydidata/test_list.html
@@ -18,21 +18,25 @@
             {# List of Tests #}
             <ul id="al-group" class="strip-list">
                 {% for test in tests %}
-                    <li class="al-item">
-                    {%get_class test user as klass%}
-                        {% get_close_url klass test as close_url %}
-                        {% get_open_url klass test as open_url %}
-                        {% get_assess_url klass test as assess_url %}
-                        {% if user.is_superuser%}
-                            {%get_progress_url klass test as progress_url%}
-                            <a href="{{ progress_url }}"><h4 class="al-name">{{klass.name}}: {{ test.title }}</h4></a>
-                            &nbsp                            
-                            | <a href="{{ assess_url }}">Corrigir</a>
-                        {%else%}
-                            <a href="{{ test.get_absolute_url }}"><h4 class="al-name">{{ test.title }}</h4></a>
-                        {%endif%}
+                    
+                    {%get_class test user as klasses%}
+                        {%for klass in klasses %}
+                            {% get_close_url klass test as close_url %}
+                            {% get_open_url klass test as open_url %}
+                            {% get_assess_url klass test as assess_url %}
+                            <li class="al-item">
+                            {% if user.is_superuser%}
+                                {%get_progress_url klass test as progress_url%}
+                                <a href="{{ progress_url }}"><h4 class="al-name">{{klass.name}}: {{ test.title }}</h4></a>
+                                &nbsp                            
+                                | <a href="{{ assess_url }}">Corrigir</a>
+                            {%else%}
+                                <a href="{{ test.get_absolute_url }}"><h4 class="al-name">{{ test.title }}</h4></a>
+                            {%endif%}
+                            </li>
+                        {%endfor%}
 
-                    </li>
+                    
                 {% endfor %}
             </ul>
             {# Pagination Section #}
